--- a/index.html
+++ b/index.html
@@ -10,19 +10,138 @@
     <!-- Head -->
     <header>
       <section>
-        <img src="/image/" alt="" />
-        <a href="">Web studio</a>
+        <a
+          href="https://www.figma.com/file/B1m2uk25m1eAgroESAuM2g/Web-Studio-(Version-3.0)?node-id=296605%3A3&t=KDFJxRi2hjTZfN12-0"
+        >
+          <span>Web </span>studio</a
+        >
+        <nav>
+          <ul>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+          </ul>
+        </nav>
+      </section>
+      <!-- Info -->
+      <section>
         <ul>
-          <li><a href="">1</a></li>
-          <li><a href="">2</a></li>
-          <li><a href="">3</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </section>
     </header>
-    <!-- Hero -->
-    <section>
-      <h1>Hello world</h1>
-      <a href="">Join to us</a>
-    </section>
+    <main>
+      <!-- Hero -->
+      <section>
+        <h1>
+          Effective Solutions <br />
+          for Your Business
+        </h1>
+        <button type="button">Order service</button>
+        <!-- //можливо буде кнопка -->
+      </section>
+      <!-- Order -->
+      <section>
+        <h2>Order</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              OResearch and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- What are we doing -->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img src="./image/scr1.jpg" alt="Сomputer" width="360" />
+          </li>
+          <li>
+            <img src="./image/scr2.jpg" alt="Telephones" width="360" />
+          </li>
+          <li>
+            <img src="./image/scr3.jpg" alt="Telephone in hand" width="360" />
+          </li>
+        </ul>
+      </section>
+      <!-- Our Team -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./image/mark-guerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./image/tom-ford.jpg" alt="Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./image/camila-garcia.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./image/daniel-wilson.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- footer -->
+    <footer>
+      <section>
+        <a href="webstudio"><span>Web</span>studio</a>
+        <p>
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
