--- a/index.html
+++ b/index.html
@@ -9,31 +9,28 @@
   <body>
     <!-- Head -->
     <header>
-      <section>
-        <a
-          href="https://www.figma.com/file/B1m2uk25m1eAgroESAuM2g/Web-Studio-(Version-3.0)?node-id=296605%3A3&t=KDFJxRi2hjTZfN12-0"
-        >
-          <span>Web </span>studio</a
-        >
-        <nav>
-          <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
-          </ul>
-        </nav>
-      </section>
-      <!-- Info -->
-      <section>
+      <a
+        href="https://www.figma.com/file/B1m2uk25m1eAgroESAuM2g/Web-Studio-(Version-3.0)?node-id=296605%3A3&t=KDFJxRi2hjTZfN12-0"
+      >
+        <span>Web </span>studio</a
+      >
+      <nav>
         <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
-          </li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
-      </section>
+      </nav>
+
+      <!-- Info -->
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+11-000-111-11-11">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
     </header>
     <main>
       <!-- Hero -->
@@ -135,13 +132,11 @@
     </main>
     <!-- footer -->
     <footer>
-      <section>
-        <a href="webstudio"><span>Web</span>studio</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </section>
+      <a href="webstudio"><span>Web</span>studio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
