--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./image/scr1.jpg/" alt="Сomputer" width="360" />
+            <img src="./image/scr1.jpg" alt="Сomputer" width="360" />
           </li>
           <li>
-            <img src="./image/scr2.jpg/" alt="Telephones" width="360" />
+            <img src="./image/scr2.jpg" alt="Telephones" width="360" />
           </li>
           <li>
-            <img src="./image/scr3.jpg/" alt="Telephone in hand" width="360" />
+            <img src="./image/scr3.jpg" alt="Telephone in hand" width="360" />
           </li>
         </ul>
       </section>
@@ -97,7 +97,7 @@
         <ul>
           <li>
             <img
-              src="./image/mark-guerrero.jpg/"
+              src="./image/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
@@ -105,13 +105,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./image/tom-ford.jpg/" alt="Tom Ford" width="264" />
+            <img src="./image/tom-ford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./image/camila-garcia.jpg/"
+              src="./image/camila-garcia.jpg"
               alt="Camila Garcia"
               width="264"
             />
@@ -120,7 +120,7 @@
           </li>
           <li>
             <img
-              src="./image/daniel-wilson.jpg/"
+              src="./image/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
