--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web studio</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <!-- Head -->
     <header>
-      <a
-        href="https://www.figma.com/file/B1m2uk25m1eAgroESAuM2g/Web-Studio-(Version-3.0)?node-id=296605%3A3&t=KDFJxRi2hjTZfN12-0"
-      >
-        <span>Web</span> studio</a
-      >
       <nav>
+        <a href="/"> <span>Web</span>Studio</a>
+
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -39,7 +36,7 @@
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button type="button">Order service</button>
+        <button type="button">Order Service</button>
         <!-- //можливо буде кнопка -->
       </section>
       <!-- Order -->
@@ -63,8 +60,8 @@
           <li>
             <h3>Diligence</h3>
             <p>
-              OResearch and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
             </p>
           </li>
           <li>
@@ -132,7 +129,7 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="webstudio"><span>Web</span>studio</a>
+      <a href="./index.html"><span>Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
