--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           <li>
             <h3>Diligence</h3>
             <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
